[package]
name = "git-download"
version = "0.1.1"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Download a single file from a Git repository."
repository = "https://github.com/akiradeveloper/git-download"
readme = "../README.md"
categories = ["development-tools"]
keywords =  ["proto", "rpc", "microservices"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tempfile = "3"
cmd_lib = "1.3.0"